# dd-embedded

./: .envrc.example  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  treefmt.nix
esp32c3-embassy/: Cargo.toml
esp32c3-embassy/src/: clock.rs  http.rs  logging.rs  main.rs  random.rs  server.rs  sleep.rs  wifi.rs  worldtimeapi.rs
esp32c3-embassy/src/dd/: mod.rs  payloads.rs
