[workspace]
resolver = "2"
members = [
    "esp32c3-embassy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Embassy
embassy-executor = { version = "0.5", default-features = false }
embassy-sync = { version = "0.5", default-features = false }
embassy-time = { version = "0.3", default-features = false }
embassy-net = { version = "0.4", default-features = false }

# Hardware Abstraction Layer
embedded-hal = { version = "1", default-features = false }
embedded-hal-async = { version = "1", default-features = false }
embedded-hal-bus = { version = "0.1", default-features = false }
embedded-io-async = { version = "0.6", default-features = false }

# ESP specifics
esp-hal = { version = "0.16", default-features = false }
esp-backtrace = { version = "0.11", default-features = false }
esp-println = { version = "0.9", default-features = false }
esp-wifi = { version = "0.4", default-features = false }

# Logging
log = { version = "0.4", default-features = false }

# Sensor
bme280-rs = { version = "0.2", default-features = false }
uom = { version = "0.33", default-features = false }

# Static objects
static_cell = { version = "2", default-features = false }

# Heapless data types
heapless = { version = "0.8", default-features = false }

# Time
time = { version = "0.3", default-features = false }

# TLS
embedded-tls = { version = "0.17", default-features = false }

# HTTP
reqwless = { version = "0.11", default-features = false }

# Random
rand_core = { version = "0.6", default-features = false }

[workspace.lints.rust]
missing_docs = "allow"

[profile.release]
strip = "debuginfo"
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
